Bug 438304 - Storyboard Export Dlg: Wrong fields are disabled when window is opened with "Use SVG Template" Checked.
Summary: Storyboard Export Dlg: Wrong fields are disabled when window is opened with "...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Storyboard (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-09 02:51 UTC by Eoin O'Neill
Modified: 2021-06-09 23:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-06-09 02:51:52 UTC
STEPS TO REPRODUCE
1. Enable use svg template and export storyboards via the export window.
2. Re-open export dialog.
3. Notice how the field for SVG file template is disabled, but the other fields are erroneously enabled.

ADDITIONAL INFORMATION
This is probably a simple fix, but important before 5.0...
Comment 1 Eoin O'Neill 2021-06-09 23:16:39 UTC
Git commit 910636fe1748f0141fe31c79820caab2071a1d6f by Eoin O'Neill.
Committed on 09/06/2021 at 23:15.
Pushed by eoinoneill into branch 'master'.

StoryboardDocker: Fix export settings erroneously being disabled / enabled with
certain configurations on initial window open state.

M  +1    -1    plugins/dockers/storyboarddocker/DlgExportStoryboard.cpp

https://invent.kde.org/graphics/krita/commit/910636fe1748f0141fe31c79820caab2071a1d6f