StoryboardDocker: Fix export settings erroneously being disabled / enabled with certain configurations on initial window open state.

BUG:438304